syntax = "proto3";

message ClientDetailsMessage {
    string nickname = 1;
    bool isReady = 2;
}

message MainMenuStateMessage {
    repeated ClientDetailsMessage clientsDetails = 1;
}

message ClientReadyMessage {}

message StartGameMessage {}

message ClientDisconnectedMessage {}

message SetClientIdMessage {
    string clientId = 1;
}